CHANGES IN FLTK 1.1.7

	- Documentation fixes (STR #648, STR #692)
	- Fl_Window::hide() didn't delete the current clipping
	  region on WIN32, causing a GDI resource leak in some
	  situations (STR #723)
	- Removed a few warnings when compiling on OS X
	- Fl_Menu now draws the arrow more like other toolkits
	  and 2.0 (STR #651)
	- Fixed a VC++ compiler error in Fl_JPEG_Image.cxx (STR
	  #676)
	- FL_SHADOW_BOX/FRAME drew outside of the bounding box
	  (STR #694)
	- Fl_Widget::copy_label(NULL) didn't work (STR #707)
	- Fl_Choice now allows click selection like
	  Fl_Menu_Button and Fl_Menubar (STR #706)
	- Updated cmake support (STR #645)
	- Fl_Check_Browser didn't draw properly when inactive
	  (STR #681)
	- Removed some redundant code in Fl_Group::handle() (STR
	  #669)
	- The file chooser didn't always deactivate the OK
	  button when necessary (STR #653)
	- Image drawing on OSX changed the current drawing
	  colors (STR #662)
	- Fixed some compiler errors on WIN32 (STR #647)
	- FLUID didn't update the widget panel X/Y/W/H values
	  when moving the selected window (STR #701)
	- FLUID didn't use the label type constant names for
	  menu items, causing them to be drawn using the normal
	  label type (STR #668)
	- Fl_File_Chooser was slow with large directories (STR
	  #654)
	- FLUID didn't add xclass() calls to windows (STR #718)
	- The X11 DND code did not correctly select a text
	  format for incoming data (STR #711)
	- Fixes to Fl_JPEG_Image error handler.
	- Fl_Menu::popup() and ::pulldown() would crash an
	  application if a callback created widgets before they
	  returned (STR #685)
	- Fl_Double_Window would cause a full redraw, even if
	  only small parts of the UI were changed on Mac OS X.
	- Fl_JPEG_Image did not correctly handle errors reported
	  by the JPEG library (STR #652)
	- Fl_Menu now draws sub-menu arrows like other toolkits
	  and FLTK 2.0 (STR #651)
	- Fixed a compiler warning in Fl_Window.H (STR #641)